--- a/package.json
+++ b/package.json
@@ -1,18 +1,37 @@
 {
   "name": "mvptracker",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "ts:check": "tsc"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.1",
+    "@react-native-picker/picker": "2.6.1",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-build-properties": "~0.11.1",
+    "expo-constants": "~15.4.5",
+    "expo-dev-client": "~3.3.11",
+    "expo-font": "~11.10.3",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-dropdownalert": "^5.1.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
