--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "expo-build-properties": "~0.11.1",
     "expo-constants": "~15.4.5",
     "expo-dev-client": "~3.3.11",
+    "expo-device": "~5.9.3",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
+    "expo-notifications": "~0.27.6",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
